Table "doctrine_migration_versions" {
  "version" varchar(191) [pk, not null]
  "executed_at" datetime
  "execution_time" int
}

Table "event" {
  "id" int [pk, not null, increment]
  "creator_id" int [not null]
  "title" varchar(255) [not null]
  "description" longtext
  "date_start" datetime [not null]
  "date_end" datetime [not null]
  "is_visible" varchar(1) [not null]
  "image" varchar(255)
  "image_size" int
  "updated_at" datetime [note: '(DC2Type:datetime_immutable)']
  "location" varchar(255)
  "is_draft" varchar(1) [not null]
  "is_recommended" tinyint(1)

  Indexes {
    creator_id [type: btree, name: "IDX_3BAE0AA761220EA6"]
  }
}

Table "event_user" {
  "event_id" int [not null]
  "user_id" int [not null]

  Indexes {
    event_id [type: btree, name: "IDX_92589AE271F7E88B"]
    user_id [type: btree, name: "IDX_92589AE2A76ED395"]
    (event_id, user_id) [pk, name: "PRIMARY"]
  }
}

Table "refresh_tokens" {
  "id" int [pk, not null, increment]
  "refresh_token" varchar(128) [unique, not null]
  "username" varchar(255) [not null]
  "valid" datetime [not null]
}

Table "user" {
  "id" int [pk, not null, increment]
  "email" varchar(180) [unique, not null]
  "password" varchar(255)
  "plain_password" varchar(255)
  "roles" json [not null]
  "first_name" varchar(255)
  "last_name" varchar(255)
  "avatar" varchar(255)
  "verification_token" varchar(255)
}

Ref "FK_3BAE0AA761220EA6":"user"."id" < "event"."creator_id"

Ref "FK_92589AE271F7E88B":"event"."id" < "event_user"."event_id" [delete: cascade]

Ref "FK_92589AE2A76ED395":"user"."id" < "event_user"."user_id" [delete: cascade]
